# stackme

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test.yml
extension/: background.js  content.css  content.js  manifest.json
extension/popup/: popup.html  popup.js
stackme/: __init__.py  cli.py  context.py  embeddings.py  server.py
stackme/integrations/: __init__.py  langchain.py
